--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 *.lastbuildstate
 MyMapleStory/MyMapleStory/MyMapleStory.vcxproj
 MyMapleStory/.vs/MyMapleStory/v16/Browse.VC.opendb
+*.lastbuildstate
+MyMapleStory/MyMapleStory/x64/Debug/MyMapleStory.tlog/MyMapleStory.lastbuildstate
